# jni_notifications

./: .gitignore  Cargo.toml  build.sh  test.sh
src/: lib.rs
