[package]
name = "jni_notifications"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # skip unwinding the stack to produce helpful backtrace in case of panic

[dependencies]
jni = "0.21.1"
libnotify = "1.0.3"

[lib]
crate_type = ["cdylib"]
